Fix Navbar Overlapping with Content while Scrolling

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-padding: 70px;
+}
+
 @media (min-width: 1000px) {
   .news-input {
     width: 50%;
